fix widths and flicker

--- a/playground/js/kreact-proxy/src/index.css
+++ b/playground/js/kreact-proxy/src/index.css
@@ -3,8 +3,8 @@ html, body {
     /*overflow: hidden;*/
 }
 .root {
-    padding: 3px;
-    padding-bottom: 8px;
+    padding: 0px;
+    
 }
 .bcanv {
     height: 100%;
